src/antlr/antlrParser.py
# Generated from antlrParser.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class antlrParser ( Parser ):

    grammarFileName = "antlrParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'|'", "'<'", "'>'", "'>>'", "'2>'", "'&>'", 
                     "'*'", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'='", "'..'", "';'" ]

    symbolicNames = [ "<INVALID>", "PIPE", "LessThan", "GreaterThan", "DGreaterThan", 
                      "TwoGreaterThan", "AndGreaterThan", "Asterisk", "Whitespace", 
                      "Whitespace1", "Newline", "Numbers", "Equality", "Dot", 
                      "Sequence", "Identifier", "Comment", "Quote", "StringLiteral", 
                      "Flag", "Filename", "EscapeSequence", "MULTIPLE_WORDS", 
                      "QUOTED_STRING" ]

    RULE_a = 0
    RULE_command = 1
    RULE_sequence = 2
    RULE_redirection = 3
    RULE_redirectionSymbols = 4
    RULE_globbing = 5
    RULE_quotation = 6
    RULE_simpleCommand = 7
    RULE_pipe = 8
    RULE_argument = 9
    RULE_identifier = 10

    ruleNames =  [ "a", "command", "sequence", "redirection", "redirectionSymbols", 
                   "globbing", "quotation", "simpleCommand", "pipe", "argument", 
                   "identifier" ]

    EOF = Token.EOF
    PIPE=1
    LessThan=2
    GreaterThan=3
    DGreaterThan=4
    TwoGreaterThan=5
    AndGreaterThan=6
    Asterisk=7
    Whitespace=8
    Whitespace1=9
    Newline=10
    Numbers=11
    Equality=12
    Dot=13
    Sequence=14
    Identifier=15
    Comment=16
    Quote=17
    StringLiteral=18
    Flag=19
    Filename=20
    EscapeSequence=21
    MULTIPLE_WORDS=22
    QUOTED_STRING=23

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class AContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def command(self):
            return self.getTypedRuleContext(antlrParser.CommandContext,0)


        def sequence(self):
            return self.getTypedRuleContext(antlrParser.SequenceContext,0)


        def getRuleIndex(self):
            return antlrParser.RULE_a

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterA" ):
                listener.enterA(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitA" ):
                listener.exitA(self)




    def a(self):

        localctx = antlrParser.AContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_a)
        try:
            self.state = 24
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 22
                self.command(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 23
                self.sequence(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def simpleCommand(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(antlrParser.SimpleCommandContext)
            else:
                return self.getTypedRuleContext(antlrParser.SimpleCommandContext,i)


        def pipe(self):
            return self.getTypedRuleContext(antlrParser.PipeContext,0)


        def redirection(self):
            return self.getTypedRuleContext(antlrParser.RedirectionContext,0)


        def argument(self):
            return self.getTypedRuleContext(antlrParser.ArgumentContext,0)


        def quotation(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(antlrParser.QuotationContext)
            else:
                return self.getTypedRuleContext(antlrParser.QuotationContext,i)


        def command(self):
            return self.getTypedRuleContext(antlrParser.CommandContext,0)


        def getRuleIndex(self):
            return antlrParser.RULE_command

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCommand" ):
                listener.enterCommand(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCommand" ):
                listener.exitCommand(self)



    def command(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = antlrParser.CommandContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 2
        self.enterRecursionRule(localctx, 2, self.RULE_command, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 27
                self.simpleCommand()
                pass

            elif la_ == 2:
                self.state = 28
                self.simpleCommand()
                self.state = 29
                self.pipe()
                self.state = 30
                self.simpleCommand()
                pass

            elif la_ == 3:
                self.state = 32
                self.simpleCommand()
                self.state = 33
                self.pipe()
                self.state = 34
                self.simpleCommand()
                pass

            elif la_ == 4:
                self.state = 36
                self.redirection(0)
                pass

            elif la_ == 5:
                self.state = 37
                self.argument()
                pass

            elif la_ == 6:
                self.state = 41
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 38
                        self.quotation() 
                    self.state = 43
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 62
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 60
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
                    if la_ == 1:
                        localctx = antlrParser.CommandContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_command)
                        self.state = 46
                        if not self.precpred(self._ctx, 9):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 9)")
                        self.state = 47
                        self.pipe()
                        self.state = 48
                        self.simpleCommand()
                        pass

                    elif la_ == 2:
                        localctx = antlrParser.CommandContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_command)
                        self.state = 50
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 51
                        self.pipe()
                        self.state = 52
                        self.simpleCommand()
                        pass

                    elif la_ == 3:
                        localctx = antlrParser.CommandContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_command)
                        self.state = 54
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 55
                        self.pipe()
                        self.state = 56
                        self.redirection(0)
                        pass

                    elif la_ == 4:
                        localctx = antlrParser.CommandContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_command)
                        self.state = 58
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 59
                        self.quotation()
                        pass

             
                self.state = 64
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class SequenceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def command(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(antlrParser.CommandContext)
            else:
                return self.getTypedRuleContext(antlrParser.CommandContext,i)


        def Sequence(self):
            return self.getToken(antlrParser.Sequence, 0)

        def sequence(self):
            return self.getTypedRuleContext(antlrParser.SequenceContext,0)


        def getRuleIndex(self):
            return antlrParser.RULE_sequence

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSequence" ):
                listener.enterSequence(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSequence" ):
                listener.exitSequence(self)



    def sequence(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = antlrParser.SequenceContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 4
        self.enterRecursionRule(localctx, 4, self.RULE_sequence, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.command(0)
            self.state = 67
            self.match(antlrParser.Sequence)
            self.state = 68
            self.command(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 75
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = antlrParser.SequenceContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_sequence)
                    self.state = 70
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 71
                    self.match(antlrParser.Sequence)
                    self.state = 72
                    self.command(0) 
                self.state = 77
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class RedirectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def simpleCommand(self):
            return self.getTypedRuleContext(antlrParser.SimpleCommandContext,0)


        def redirectionSymbols(self):
            return self.getTypedRuleContext(antlrParser.RedirectionSymbolsContext,0)


        def StringLiteral(self):
            return self.getToken(antlrParser.StringLiteral, 0)

        def Filename(self):
            return self.getToken(antlrParser.Filename, 0)

        def command(self):
            return self.getTypedRuleContext(antlrParser.CommandContext,0)


        def redirection(self):
            return self.getTypedRuleContext(antlrParser.RedirectionContext,0)


        def getRuleIndex(self):
            return antlrParser.RULE_redirection

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRedirection" ):
                listener.enterRedirection(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRedirection" ):
                listener.exitRedirection(self)



    def redirection(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = antlrParser.RedirectionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 6
        self.enterRecursionRule(localctx, 6, self.RULE_redirection, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [15]:
                self.state = 79
                self.simpleCommand()
                self.state = 80
                self.redirectionSymbols()
                self.state = 81
                self.match(antlrParser.StringLiteral)
                pass
            elif token in [20]:
                self.state = 83
                self.match(antlrParser.Filename)
                self.state = 84
                self.redirectionSymbols()
                self.state = 85
                self.match(antlrParser.StringLiteral)
                pass
            elif token in [2, 3]:
                self.state = 87
                self.redirectionSymbols()
                self.state = 88
                self.match(antlrParser.StringLiteral)
                self.state = 89
                self.command(0)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 99
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = antlrParser.RedirectionContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_redirection)
                    self.state = 93
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 94
                    self.redirectionSymbols()
                    self.state = 95
                    self.match(antlrParser.StringLiteral) 
                self.state = 101
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class RedirectionSymbolsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def GreaterThan(self):
            return self.getToken(antlrParser.GreaterThan, 0)

        def LessThan(self):
            return self.getToken(antlrParser.LessThan, 0)

        def getRuleIndex(self):
            return antlrParser.RULE_redirectionSymbols

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRedirectionSymbols" ):
                listener.enterRedirectionSymbols(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRedirectionSymbols" ):
                listener.exitRedirectionSymbols(self)




    def redirectionSymbols(self):

        localctx = antlrParser.RedirectionSymbolsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_redirectionSymbols)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            _la = self._input.LA(1)
            if not(_la==2 or _la==3):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GlobbingContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def simpleCommand(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(antlrParser.SimpleCommandContext)
            else:
                return self.getTypedRuleContext(antlrParser.SimpleCommandContext,i)


        def Asterisk(self):
            return self.getToken(antlrParser.Asterisk, 0)

        def argument(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(antlrParser.ArgumentContext)
            else:
                return self.getTypedRuleContext(antlrParser.ArgumentContext,i)


        def getRuleIndex(self):
            return antlrParser.RULE_globbing

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGlobbing" ):
                listener.enterGlobbing(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGlobbing" ):
                listener.exitGlobbing(self)




    def globbing(self):

        localctx = antlrParser.GlobbingContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_globbing)
        try:
            self.state = 120
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 104
                self.simpleCommand()
                self.state = 105
                self.match(antlrParser.Asterisk)
                self.state = 106
                self.simpleCommand()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 108
                self.simpleCommand()
                self.state = 109
                self.match(antlrParser.Asterisk)
                self.state = 110
                self.argument()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 112
                self.argument()
                self.state = 113
                self.match(antlrParser.Asterisk)
                self.state = 114
                self.simpleCommand()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 116
                self.argument()
                self.state = 117
                self.match(antlrParser.Asterisk)
                self.state = 118
                self.argument()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QuotationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MULTIPLE_WORDS(self):
            return self.getToken(antlrParser.MULTIPLE_WORDS, 0)

        def QUOTED_STRING(self):
            return self.getToken(antlrParser.QUOTED_STRING, 0)

        def getRuleIndex(self):
            return antlrParser.RULE_quotation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQuotation" ):
                listener.enterQuotation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQuotation" ):
                listener.exitQuotation(self)




    def quotation(self):

        localctx = antlrParser.QuotationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_quotation)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            _la = self._input.LA(1)
            if not(_la==22 or _la==23):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SimpleCommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(antlrParser.IdentifierContext,0)


        def argument(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(antlrParser.ArgumentContext)
            else:
                return self.getTypedRuleContext(antlrParser.ArgumentContext,i)


        def getRuleIndex(self):
            return antlrParser.RULE_simpleCommand

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimpleCommand" ):
                listener.enterSimpleCommand(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimpleCommand" ):
                listener.exitSimpleCommand(self)




    def simpleCommand(self):

        localctx = antlrParser.SimpleCommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_simpleCommand)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.identifier()
            self.state = 128
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 125
                    self.argument() 
                self.state = 130
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PipeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PIPE(self):
            return self.getToken(antlrParser.PIPE, 0)

        def getRuleIndex(self):
            return antlrParser.RULE_pipe

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPipe" ):
                listener.enterPipe(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPipe" ):
                listener.exitPipe(self)




    def pipe(self):

        localctx = antlrParser.PipeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_pipe)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.match(antlrParser.PIPE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgumentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def StringLiteral(self):
            return self.getToken(antlrParser.StringLiteral, 0)

        def Numbers(self):
            return self.getToken(antlrParser.Numbers, 0)

        def Identifier(self):
            return self.getToken(antlrParser.Identifier, 0)

        def Dot(self):
            return self.getToken(antlrParser.Dot, 0)

        def Filename(self):
            return self.getToken(antlrParser.Filename, 0)

        def Whitespace(self):
            return self.getToken(antlrParser.Whitespace, 0)

        def Flag(self):
            return self.getToken(antlrParser.Flag, 0)

        def quotation(self):
            return self.getTypedRuleContext(antlrParser.QuotationContext,0)


        def getRuleIndex(self):
            return antlrParser.RULE_argument

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArgument" ):
                listener.enterArgument(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArgument" ):
                listener.exitArgument(self)




    def argument(self):

        localctx = antlrParser.ArgumentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_argument)
        try:
            self.state = 141
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [18]:
                self.enterOuterAlt(localctx, 1)
                self.state = 133
                self.match(antlrParser.StringLiteral)
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 2)
                self.state = 134
                self.match(antlrParser.Numbers)
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 3)
                self.state = 135
                self.match(antlrParser.Identifier)
                pass
            elif token in [13]:
                self.enterOuterAlt(localctx, 4)
                self.state = 136
                self.match(antlrParser.Dot)
                pass
            elif token in [20]:
                self.enterOuterAlt(localctx, 5)
                self.state = 137
                self.match(antlrParser.Filename)
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 6)
                self.state = 138
                self.match(antlrParser.Whitespace)
                pass
            elif token in [19]:
                self.enterOuterAlt(localctx, 7)
                self.state = 139
                self.match(antlrParser.Flag)
                pass
            elif token in [22, 23]:
                self.enterOuterAlt(localctx, 8)
                self.state = 140
                self.quotation()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(antlrParser.Identifier, 0)

        def getRuleIndex(self):
            return antlrParser.RULE_identifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentifier" ):
                listener.enterIdentifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentifier" ):
                listener.exitIdentifier(self)




    def identifier(self):

        localctx = antlrParser.IdentifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_identifier)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self.match(antlrParser.Identifier)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[1] = self.command_sempred
        self._predicates[2] = self.sequence_sempred
        self._predicates[3] = self.redirection_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def command_sempred(self, localctx:CommandContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 9)
         

            if predIndex == 1:
                return self.precpred(self._ctx, 7)
         

            if predIndex == 2:
                return self.precpred(self._ctx, 4)
         

            if predIndex == 3:
                return self.precpred(self._ctx, 3)
         

    def sequence_sempred(self, localctx:SequenceContext, predIndex:int):
            if predIndex == 4:
                return self.precpred(self._ctx, 1)
         

    def redirection_sempred(self, localctx:RedirectionContext, predIndex:int):
            if predIndex == 5:
                return self.precpred(self._ctx, 2)
         




